Fix endianness bugs in bson_scan.cpp and sbe_stage_builder_expression.cpp

XMLWordPrintableJSON

    • Fully Compatible
    • ALL
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      The goal of this task is to fix the endianness bugs in "src/mongo/db/exec/sbe/stages/bson_scan.cpp" and "src/mongo/db/query/sbe_stage_builder_expression.cpp" that were discovered via manual inspection.

            Assignee:
            Drew Paroski (Inactive)
            Reporter:
            Drew Paroski (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: