SERVER-55830 Fix endianness bugs in bson_scan.cpp and sbe_stage_builder_expression.cpp